--- a/compose.yml
+++ b/compose.yml
@@ -156,6 +156,7 @@ services:
         volumes:
             - ${HOME}/docker/readarr:/config
             - nfs-media:/media
+            - rey-books:/books
         restart: unless-stopped
 
     overseerr:
